--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -14,6 +14,10 @@ JpgraphBundle_graph_test1:
     pattern:  /graph/graphtest1
     defaults: { _controller: DafuerJpgraphBundle:Default:graphtest1 }
     
+JpgraphBundle_graph_test2:
+    pattern:  /graph/graphtest2
+    defaults: { _controller: DafuerJpgraphBundle:Default:graphtest2 }    
+    
 JpgraphBundle_graph_drawtimeseries:
     pattern:  /graph/drawtimeseries
     defaults: { _controller: DafuerJpgraphBundle:Default:drawtimeseries }
