--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -14,7 +14,9 @@ JpgraphBundle_graph_test1:
     pattern:  /graph/graphtest1
     defaults: { _controller: DafuerJpgraphBundle:Default:graphtest1 }
     
-
+JpgraphBundle_graph_test2:
+    pattern:  /graph/graphtest2
+    defaults: { _controller: DafuerJpgraphBundle:Default:graphtest2 }
     
 JpgraphBundle_graph_drawtimeseries:
     pattern:  /graph/drawtimeseries
