--- a/Resources/config/jpgraph_styles.yml
+++ b/Resources/config/jpgraph_styles.yml
@@ -1,145 +1,167 @@
 # Autor: David Fuertes
 # github: dafuer
 
-# Here you can define you graph styles.
-# The rules are simply: Only one level of nesting. Two level only for style tag.
+# Here you can define you graph styles_
+# The rules are simply: Only one level of nesting_ Two level only for style tag_
 # One element one object
 # Style tag is remplaced with de values of the linked tag
 
     
-# all options are...
+# all options are___
 
 #generic_graph: tag_name
-#    graph.width: integer
-#    graph.height: integer
-#    graph.scale: XXXXXXXXXXXXX
-#    graph.box: boolean
-#    graph.title: string
-#    graph.title.font: string XXXX
-#    graph.xaxis.ticklabels: array # Array de valores o %XDATA% para referirse a los valores del array de X.
-#    graph.yaxis.hidezerolabel: boolean
-#    graph.yaxis.hideline: boolean
-#    graph.xgrid.show: true
-#    graph.xgrid.linestyle: "solid"
-#    graph.xgrid.color: '#E3E3E3'   
-#    graph.img.antialiasing: false
-#    graph.legend.frameweight: integer
-#    graph.margincolor: color
-#    graph.frame: [boolean,color, integer] #[draw it?, color, width]
-#
+#    graph_width: integer
+#    graph_height: integer
+#    graph_scale: XXXXXXXXXXXXX
+#    graph_box: boolean
+#    graph_title: string
+#    graph_title_font: string XXXX
+#    graph_xaxis_ticklabels: array # Array de valores o %XDATA% para referirse a los valores del array de X_
+#    graph_yaxis_hidezerolabel: boolean
+#    graph_yaxis_hideline: boolean
+#    graph_xgrid_show: true
+#    graph_xgrid_linestyle: "solid"
+#    graph_xgrid_color: '#E3E3E3'   
+#    graph_img_antialiasing: false
+#    graph_legend_frameweight: integer
+#    graph_margincolor: color
+#    graph_frame: [boolean,color, integer] #[draw it?, color, width]
+#    
 #generic_lineplot:
-#    lineplot.color: color
-#    lineplot.weight: integer
-#    lineplot.legend: string
-#    lineplot.max_ptos_to_mark: integer #If #points < max_ptos_to_mark, marks are used. If -1 never used. if 0 never use mark. if -1 always use mark.
-#    lineplot.mark.color: color
-#    lineplot.mark.width: integer
+#    lineplot_color: color
+#    lineplot_weight: integer
+#    lineplot_legend: string
+#    lineplot_max_ptos_to_mark: integer #If #points < max_ptos_to_mark, marks are used_ If -1 never used_ if 0 never use mark_ if -1 always use mark_
+#    lineplot_mark_color: color
+#    lineplot_mark_width: integer
 
 
-# You can put here your styles. If you want that the examples run properly, you can't remove example styles
+#graph_yscale_min
+#...
 
-graph_example: 
-    graph.width: 300   
-    graph.height: 250
-    graph.scale: "textlin" 
-    graph.box: false
-    graph.antialiasing: false
-    graph.title: "My graph"
-    
-    
+# You can put here your styles_ If you want that the examples run properly, you can't remove example styles
 
+graph_example:
+    graph: graph
+    graph_width: 300   
+    graph_height: 250
+    graph_scale: "texlin" 
+    graph_box: false
+    graph_antialiasing: false
+    graph_title: "My graph"    
 
 graph_example2: 
     style: [ "graph_example" ]
-    graph.width: 600   
-    graph.height: 400
-    graph.scale: "intlin" 
-    graph.box: false
-    graph.antialiasing: false
-    
-
-    
+    graph_width: 600   
+    graph_height: 400
+    graph_scale: "intlin" 
+    graph_box: false
+    graph_antialiasing: false
+       
 xaxis_example: 
-    graph.xaxis.ticklabels: [ 'A', 'B', 'C', 'D' ]
-    graph.xaxis.linestyle: "solid"
-    
+    graph_xaxis_ticklabels: [ 'A', 'B', 'C', 'D' ]
+    graph_xaxis_linestyle: "solid"
+      
 lineplot_example:
     style: [ xaxis_example , yaxis_timeserie , lineplot_mark_timeserie ]
-    lineplot.color: "#6495ED"
-    lineplot.legend: 'Line1'
-    graph.xaxis.labelangle: 0 
+    lineplot: lineplot
+    lineplot_color: "#6495ED"
+    lineplot_legend: 'Line1'
+    graph_xaxis_labelangle: 0 
 
-
-
-#This are default values. All value must exist.
+##### FIN DE EXAMPLES #####################
 
 graph_timeserie:
     style: [  title_timeserie , xgrid_timeserie , legend_timeserie ]
-    graph.width: 300   
-    graph.height: 250
-    graph.scale: "intlin" 
-    graph.box: false
-    graph.title: ''
-    graph.img.antialiasing: false
-    graph.img.margin: [60, 20, 20, 80]
-    graph.margincolor: "#FFFFFF"
-    graph.frame: [false,'#555555', 1]
-    graph.clipping: true
+    graph: graph
+    graph_width: 400   
+    graph_height: 250
+    graph_scale: "intlin" 
+    graph_box: false
+    graph_title: ''
+    graph_img_antialiasing: false
+    graph_img_margin_left: 60
+    graph_img_margin_right: 30
+    graph_img_margin_top: 20
+    graph_img_margin_bottom: 80
+    graph_margincolor: "#FFFFFF"
+    graph_frame: [false,'#555555', 1]
+    graph_clipping: true    
     
-   
-
+    
+error_graph:
+    canvasgraph_width: 10
+    canvasgraph_height: 10
+    canvasgraph_color: white
 
 legend_timeserie:
-    graph.legend.frameweight: 1
+    graph_legend_frameweight: 1
+    graph_legend_abspos_x:      0.0             # 0.0
+    graph_legend_abspos_y:      20.0            # 20.0
+    graph_legend_abspos_halign: right           # right
+    graph_legend_abspos_valign: top             # top
+    graph_legend_layout:        LEGEND_VERT     # LEGEND_VERT
+    graph_legend_shadow:        darkgray@0.5    # 'darkgray@0.5'
+    graph_legend_fillcolor:     white@0         # 'white@0'
+    graph_legend_hide:          true            # true    
   
 xaxis_timeserie: 
-    #graph.xaxis.ticklabels: [ 'a', 'b', 'c', 'd' ]
-    graph.xaxis.title: ''
-    graph.xaxis.labelangle: 90 
-    graph.xaxis.labelformatcallback: AutoTimeCallback
-    graph.xaxis.pos: min    
-    
+    #graph_xaxis_ticklabels: [ 'a', 'b', 'c', 'd' ]
+    graph_xaxis_title: ''
+    graph_xaxis_labelangle: 90 
+    graph_xaxis_labelformatcallback: AutoTimeCallback
+    graph_xaxis_pos: min    
+
 yaxis_timeserie: 
-    graph.yaxis.hidezerolabel: true
-    graph.yaxis.hideline: false
-    graph.yaxis.title: ''
-    graph.yaxis.titlemargin: 45
-   
-                 
-              
+    graph_yaxis_number: 0
+    graph_yaxis_hidezerolabel: true
+    graph_yaxis_hideline: false
+    graph_yaxis_title: ''
+    graph_yaxis_titlemargin: 45   
+                             
 title_timeserie: 
-    graph.title: ''
-        
+    graph_title: ''
+                
 xgrid_timeserie: 
-    graph.xgrid.show: true
-    graph.xgrid.linestyle: "solid"
-    graph.xgrid.color: '#E3E3E3'
-    graph.xgrid.linestyle: "solid"
-    
+    graph_xgrid_show: true
+    graph_xgrid_linestyle: "solid"
+    graph_xgrid_color: '#E3E3E3'
+    graph_xgrid_linestyle: "solid"
+        
 ygrid_timeserie:
-    graph.ygrid.fill: [true, '#FFFFFF@0', '#CCCCDD@0']
-    
-    
-lineplot_mark_timeserie: 
-    lineplot.max_ptos_to_mark: -1
-    lineplot.mark.color: %lineplot_color%
-    lineplot.mark.width: 3
-    lineplot.mark.type: MARK_X
-    
-    
+    graph_ygrid_fill: [true, '#FF99FF@0.9', '#CCCCDD@0.9']
+      
+lineplot_mark_timeserie:
+    lineplot: lineplot
+    lineplot_max_ptos_to_mark: -1
+    lineplot_mark_color: %lineplot_color%
+    lineplot_mark_width: 3
+    lineplot_mark_type: MARK_X
+       
 lineplot_timeserie:
-    style: [ xaxis_timeserie , yaxis_timeserie , lineplot_mark_timeserie, ygrid_timeserie]
-    lineplot.color: "#6495ED"
-    lineplot.weight: 1
-    lineplot.legend: ''
-    #lineplot.reescale: true
-    graph.yscale.autoticks: true
-    graph.xaxis.labelformatcallback:  AutoTimeCallback
-    graph.xaxis.labelangle: 90    
+    style: [  graph_timeserie , xaxis_timeserie , yaxis_timeserie , lineplot_mark_timeserie, ygrid_timeserie ]
+    lineplot: lineplot
+    lineplot_color: "#6495ED"
+    lineplot_weight: 1
+    lineplot_legend: ''
+    graph_yscale_autoticks: true
+    graph_xaxis_labelformatcallback:  AutoTimeCallback
+    graph_xaxis_labelangle: 90    
 
 errorlineplot_timeserie:
-    style: [ xaxis_timeseriet , yaxis_timeserie , lineplot_mark_timeserie, ygrid_timeserie]
-    lineplot.color: "#6495ED"
-    lineplot.weight: 1
-    lineplot.legend: ''
+    style: [ lineplot_timeserie ]
+    lineplot: errorlineplot
+    errorlineplot_color: gray
     
+    
+boxplot_timeserie:
+    style: [ lineplot_timeserie ]
+    lineplot: boxplot 
+    
+barplot_timeserie:
+    style: [ lineplot_timeserie ]
+    lineplot: barplot     
+
+scatterplot_timeserie:
+    style: [ lineplot_timeserie ]
+    lineplot: scatterplot   
