composer target specified

--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,6 @@
     "description": "This package provides a easy integration of jpgraph library into Symfony2 project",
     "require": {
 
-    }
+    },
+    "target-dir": "Dafuer/JpgraphBundle"
 }
