Added command installconstant anf ixantialiaserror. Solved paths in jpgraph

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -7,6 +7,6 @@ parameters:
 services:
     jpgraph:
         class: %jpgraph.class%
-        arguments: [%jpgraph.config_file%] #, %jpgraph.viewer_file%]      
+        arguments: [%jpgraph.config_file%, %kernel.root_dir%] #, %jpgraph.viewer_file%]      
         
 
