--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,19 @@
         "post-update-cmd": [
             "Dafuer\\JpgraphBundle\\Composer\\ScriptHandler::setupJpgraph"
         ]
-    }    
+    },    
+    "repositories": [
+        {
+            "type": "package",
+            "package":{
+                "name": "asial/jpgraph",
+                "version": "3.5.0b1",
+                "dist":{
+                    "url": "http://jpgraph.net/download/download.php?p=5",
+                    "type": "tar"
+                }
+            }
+        }
+    ]
 
 }
