added graph_yaxis_tick_interval y graph_xaxis_tick_interval

--- a/Resources/config/jpgraph_styles.yml
+++ b/Resources/config/jpgraph_styles.yml
@@ -26,7 +26,9 @@
 #    graph_legend_frameweight: integer
 #    graph_margincolor: color
 #    graph_frame: [boolean,color, integer] #[draw it?, color, width]
-#    
+#    graph_xaxis_tick_interval
+#    graph_yaxis_tick_interval
+
 #generic_lineplot:
 #    lineplot_color: color
 #    lineplot_weight: integer
