--- a/Resources/config/jpgraph_styles.yml
+++ b/Resources/config/jpgraph_styles.yml
@@ -30,7 +30,20 @@
 #    graph_yaxis_tick_interval
 #    graph_xaxis_pos: min
 #    graph_yaxis_pos: min
-
+#    graph_xaxis_tickside: SIDE_DOWN
+#    graph_xaxis_tick_hide_major: false
+#    graph_xaxis_tick_hide_minor: false
+#    graph_xaxis_tick_size_major: 15
+#    graph_xaxis_tick_size_minor: 10
+#    
+#    graph_yaxis_tickside: SIDE_LEFT
+#    graph_yaxis_tick_hide_major: false
+#    graph_yaxis_tick_hide_minor: false
+#    graph_yaxis_tick_size_major: 15
+#    graph_yaxis_tick_size_minor: 10  
+#    graph_xaxis_tick_color:
+#    graph_yaxis_tick_color:
+        
 #generic_lineplot:
 #    lineplot_color: color
 #    lineplot_weight: integer
