--- a/Resources/config/jpgraph_styles.yml
+++ b/Resources/config/jpgraph_styles.yml
@@ -48,6 +48,8 @@
 #    graph_color
 #    graph_xgrid_show
 #    graph_ygrid_show
+#    lineplot_style: solid # dotted, dashed, longdashed
+
 
 #generic_lineplot:
 #    lineplot_color: color
