--- a/Resources/config/jpgraph_styles.yml
+++ b/Resources/config/jpgraph_styles.yml
@@ -115,7 +115,12 @@ graph_timeserie:
     graph_margincolor: "#FFFFFF"
     graph_frame: [false,'#555555', 1]
     graph_clipping: true    
+    graph_empty: 'AXIS'   # or canvas style name, example: empty_graph 
     
+empty_graph:
+    canvasgraph_width: 10
+    canvasgraph_height: 10
+    canvasgraph_color: '#f5f5f5'
     
 error_graph:
     canvasgraph_width: 10
