--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "This package provides a easy integration of jpgraph library into Symfony2 project",
     "type": "symfony-bundle",
     "require": {
-        "asial/jpgraph": "3.5.0b1"
+        "jpgraph/jpgraph": "4.0.2"
     },
     "autoload": {
         "psr-0": { "Dafuer\\JpgraphBundle": "" }
@@ -21,7 +21,7 @@
         {
             "type": "package",
             "package":{
-                "name": "asial/jpgraph",
+                "name": "jpgraph/jpgraph",
                 "version": "3.5.0b1",
                 "dist":{
                     "url": "http://jpgraph.net/download/download.php?p=5",
